omg i added accent boxes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,44 @@
                         Spell the word here: <input id="text_input" type="text">
                         <button onclick="submit();">Submit</button>
                         <h3 id="stats">0 out of 0 correct</h3>
+                        <br>
+
+                        <button class="insert" value="À">À</button>
+                        <button class="insert" value="È">È</button>
+                        <button class="insert" value="Ì">Ì</button>
+                        <button class="insert" value="Ò">Ò</button>
+                        <button class="insert" value="Ù">Ù</button>
+                        <br>
+
+                        <button class="insert" value="à">à</button>
+                        <button class="insert" value="è">è</button>
+                        <button class="insert" value="ì">ì</button>
+                        <button class="insert" value="ò">ò</button>
+                        <button class="insert" value="ù">ù</button>
+                        <br><br>
+
+                        <button class="insert" value="Á">Á</button>
+                        <button class="insert" value="É">É</button>
+                        <button class="insert" value="Í">Í</button>
+                        <button class="insert" value="Ó">Ó</button>
+                        <button class="insert" value="Ú">Ú</button>
+                        <br>
+
+                        <button class="insert" value="á">á</button>
+                        <button class="insert" value="é">é</button>
+                        <button class="insert" value="í">í</button>
+                        <button class="insert" value="ó">ó</button>
+                        <button class="insert" value="ú">ú</button>
+                        <br><br>
+
+                        <button class="insert" value="ä">ä</button>
+                        <button class="insert" value="ë">ë</button>
+                        <button class="insert" value="ö">ö</button>
+                        <button class="insert" value="â">â</button>
+                        <button class="insert" value="ê">ê</button>
+                        <button class="insert" value="ô">ô</button>
+                        <button class="insert" value="ñ">ñ</button>
+                        <button class="insert" value="ç">ç</button>
                     </div>
                 </section>
 
