there was definitely a way to automate everything I just did... - changed buttons a bit - multiple spelling forms are now permitted (like abelia vs Abelia or smth) - all 1500 audio files SHOULD be matched to the actual word, hopefully I didn't miss anything...
wow this is hard

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </tr>
                     </table>
 
-                    <button onclick="start();">Get a Word</button>
+                    <button onclick="start();">Start Practicing!</button>
                 </div>
 
 
