--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                     <h2 id="msg-set">Congrats on finishing Set <h2>
                     <h4 id="msg-right">Out of the 75 words, you got </h4>
                     <h4>To practice some more, reload the page</h4>
+                    <h4 style="color:red;">Missed Words:</h4>
+                    <ul id="end_wrong">
+
+                    </ul>
                 </div>
 
             </div>
