1st commit of 2024 season!
added all 1500 words, hopefully with as few errors as possible...

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"></script>
-        <script src="2023.js"></script>
+        <script src="2024.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <title>2023 UIL Spelling Trainer</title>
+        <title>2024 UIL Spelling Trainer</title>
     </head>
 
     <body>
-        <header style="text-align:center;"> <h1>2023 UIL Spelling Trainer</h1> </header>
+        <header style="text-align:center;"> <h1>2024 UIL Spelling Trainer</h1> </header>
         <br>
 
         <div class="container">
@@ -91,12 +91,16 @@
                         <button class="insert" value="ú">ú</button>
                         <br><br>
 
+                        <button class="insert" value="â">â</button>
+                        <button class="insert" value="ê">ê</button>
+                        <button class="insert" value="î">î</button>
+                        <button class="insert" value="ô">ô</button>
+                        <button class="insert" value="û">û</button>
+                        <br><br>
+
                         <button class="insert" value="ä">ä</button>
                         <button class="insert" value="ë">ë</button>
                         <button class="insert" value="ö">ö</button>
-                        <button class="insert" value="â">â</button>
-                        <button class="insert" value="ê">ê</button>
-                        <button class="insert" value="ô">ô</button>
                         <button class="insert" value="ñ">ñ</button>
                         <button class="insert" value="ç">ç</button>
                     </div>
