Updates for week of June 26, 2023
- Updated audio file for "Ohm's law" and "druidism"
- Added buttons for ï and ü

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
 
                         <button class="insert" value="ä">ä</button>
                         <button class="insert" value="ë">ë</button>
+                        <button class="insert" value="ï">ï</button>
                         <button class="insert" value="ö">ö</button>
+                        <button class="insert" value="ü">ü</button>
+                        <br><br>
+
                         <button class="insert" value="ñ">ñ</button>
                         <button class="insert" value="ç">ç</button>
                     </div>
